[gd_scene load_steps=8 format=3 uid="uid://b0u70qesn4lw0"]

[ext_resource type="Script" path="res://addons/inventory_slot_plugin/script/dock/panel_slot.gd" id="1_joxuk"]
[ext_resource type="Texture2D" uid="uid://cpov2vpvvqtgt" path="res://addons/inventory_slot_plugin/assets/icons/slot_hide_button.tres" id="2_pc000"]
[ext_resource type="Script" path="res://addons/inventory_slot_plugin/script/class/buttonvisible.gd" id="2_unog3"]
[ext_resource type="Texture2D" uid="uid://b3gjbet1fqlon" path="res://addons/inventory_slot_plugin/assets/icons/slot_more.tres" id="4_aauc0"]
[ext_resource type="Texture2D" uid="uid://fpmoxkao1nxc" path="res://addons/inventory_slot_plugin/assets/icons/slot_remove_button.tres" id="4_rp7ey"]
[ext_resource type="Texture2D" uid="uid://vcqdmhm3l70u" path="res://addons/inventory_slot_plugin/assets/icons/slot_rename.tres" id="6_uatu7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jafag"]
color = Color(0.29366, 0.29366, 0.29366, 1)
grow_begin = -84.0
grow_end = -84.0

[node name="PanelSlot" type="PanelContainer"]
offset_right = 347.0
offset_bottom = 181.0
script = ExtResource("1_joxuk")

[node name="Vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Vbox"]
layout_mode = 2

[node name="Tittle" type="Button" parent="Vbox/TopBar" node_paths=PackedStringArray("NodeVisible")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "0"
icon = ExtResource("2_pc000")
script = ExtResource("2_unog3")
NodeVisible = NodePath("../../Settings")

[node name="More" type="Button" parent="Vbox/TopBar" node_paths=PackedStringArray("NodeVisible")]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("4_aauc0")
icon_alignment = 1
script = ExtResource("2_unog3")
NodeVisible = NodePath("vbox")
icon_use = false
no_focus_hide = true

[node name="vbox" type="VBoxContainer" parent="Vbox/TopBar/More"]
visible = false
layout_mode = 0
offset_left = -75.0
offset_top = -68.0
offset_right = 25.0
offset_bottom = -1.0

[node name="Remove" type="Button" parent="Vbox/TopBar/More/vbox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Remove"
icon = ExtResource("4_rp7ey")
alignment = 2

[node name="EditName" type="Button" parent="Vbox/TopBar/More/vbox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Rename"
icon = ExtResource("6_uatu7")
alignment = 2

[node name="Settings" type="VBoxContainer" parent="Vbox"]
visible = false
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="Vbox/Settings"]
layout_mode = 2

[node name="Tittle" type="Label" parent="Vbox/Settings/Name"]
layout_mode = 2
text = "Panel name:"

[node name="PanelName" type="LineEdit" parent="Vbox/Settings/Name"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "NewPanel"
placeholder_text = "PanelName"

[node name="ID" type="HBoxContainer" parent="Vbox/Settings"]
layout_mode = 2

[node name="Tittle" type="Label" parent="Vbox/Settings/ID"]
layout_mode = 2
text = "ID:"

[node name="Warning" type="Label" parent="Vbox/Settings/ID"]
visible = false
modulate = Color(1, 0.381932, 0.61871, 1)
layout_mode = 2
text = "This ID is already in use!"

[node name="Id" type="SpinBox" parent="Vbox/Settings/ID"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 999.0

[node name="MaxSlot" type="HBoxContainer" parent="Vbox/Settings"]
layout_mode = 2

[node name="Tittle" type="Label" parent="Vbox/Settings/MaxSlot"]
layout_mode = 2
text = "Slot amount:"

[node name="Amount" type="SpinBox" parent="Vbox/Settings/MaxSlot"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 999.0

[node name="ClassUnique" type="HBoxContainer" parent="Vbox/Settings"]
layout_mode = 2

[node name="Tittle" type="Label" parent="Vbox/Settings/ClassUnique"]
layout_mode = 2
text = "Class unique:"

[node name="Class" type="OptionButton" parent="Vbox/Settings/ClassUnique"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 2
popup/item_0/text = "all"
popup/item_1/text = "new_class"
popup/item_1/id = 1

[node name="hs" type="HSeparator" parent="Vbox"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_jafag")

[connection signal="gui_input" from="Vbox/TopBar/Tittle" to="." method="_on_tittle_gui_input"]
[connection signal="pressed" from="Vbox/TopBar/More/vbox/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="Vbox/TopBar/More/vbox/EditName" to="." method="_on_edit_name_pressed"]
[connection signal="focus_exited" from="Vbox/Settings/Name/PanelName" to="." method="_on_panel_name_focus_exited"]
[connection signal="text_submitted" from="Vbox/Settings/Name/PanelName" to="." method="_on_panel_name_text_submitted"]
[connection signal="value_changed" from="Vbox/Settings/ID/Id" to="." method="_on_id_value_changed"]
[connection signal="value_changed" from="Vbox/Settings/MaxSlot/Amount" to="." method="_on_amount_value_changed"]
[connection signal="item_selected" from="Vbox/Settings/ClassUnique/Class" to="." method="_on_class_item_selected"]
